RESOLVED FIXED256762
[iOS] Typing is extremely slow when editing very long sentences, with out-of-process keyboard
https://bugs.webkit.org/show_bug.cgi?id=256762
Summary [iOS] Typing is extremely slow when editing very long sentences, with out-of-...
Wenson Hsieh
Reported 2023-05-13 15:39:50 PDT
Attachments
Wenson Hsieh
Comment 1 2023-05-13 16:38:44 PDT
EWS
Comment 2 2023-05-15 16:07:10 PDT
Committed 264086@main (299bc278524d): <https://commits.webkit.org/264086@main> Reviewed commits have been landed. Closing PR #13859 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.